--- a/style.css
+++ b/style.css
@@ -38,12 +38,47 @@ body {
     border-radius: 50%;
 }
 
+.microsoft {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.microsoft > div {
+    width: 46%;
+    height: 46%;
+    margin: 2%;
+}
+
+.microsoft > .red {
+    background-color: #F34F1C;
+}
+
+.microsoft > .green {
+    background-color: #7FBC00;
+}
+
+.microsoft > .blue {
+    background-color: #01A6F0;
+}
+
+.microsoft > .yellow {
+    background-color: #FFBA01;
+}
+
+.logos {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 .logo {
     border-radius: 50px;
     background: #ffffff;
     box-shadow: 20px 20px 60px #d9d9d9,
     -20px -20px 60px #ffffff;
     padding: 5%;
+    margin: 2%;
 }
 
 .logo.square {
